Fix font size and badge alignment

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -403,7 +403,7 @@ h1 {
   /* width: 15em; */
   display: inline-block;
   font-family: "Aeonik";
-  font-size: 0.875rem;
+  font-size: 1rem;
   font-weight: 400;
 }
 
@@ -470,7 +470,7 @@ h1 {
 
 .landing-card-p {
   font-family: "Aeonik";
-  font-size: 0.875rem;
+  font-size: 1rem;
   font-weight: 400;
   margin-bottom: 1.5rem;
 }
@@ -500,7 +500,7 @@ h1 {
   color: #6d28d9;
   background-color: #ede9fe;
   border-radius: 0.125rem;
-  margin: 2.5rem 1.5rem 0rem 1.5rem;
+  margin: 0rem 1.5rem;
   padding: 0 0.5rem;
 }
 
@@ -511,7 +511,7 @@ h1 {
   color: #1d4ed8;
   background-color: #dbeafe;
   border-radius: 0.125rem;
-  margin: 2.5rem 1.5rem 0rem 1.5rem;
+  margin: 0rem 1.5rem;
   padding: 0 0.5rem;
 }
 
